extends Node


func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://Scenes/castle.tscn")


func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://Scenes/escape.tscn")


func _on_level_3_pressed():
	get_tree().change_scene_to_file("res://Scenes/snow.tscn")


func _on_level_4_pressed():
	get_tree().change_scene_to_file("res://Scenes/hideout.tscn")



func _on_level_5_pressed():
	get_tree().change_scene_to_file("res://Scenes/celestial.tscn")


func _on_level_6_pressed():
	get_tree().change_scene_to_file("res://Scenes/climb.tscn")
